--- a/backend/AccessManager.API/appsettings.Development.json
+++ b/backend/AccessManager.API/appsettings.Development.json
@@ -7,5 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=password"
+  },
+  "Jwt": {
+    "Secret": "your_secret_key_here_1234567890!",
+    "Issuer": "https://localhost:5071",
+    "Audience": "http://localhost:4200",
+    "AccessTokenExpirationInMinutes": 15,
+    "RefreshTokenExpirationInDays": 90
   }
 }
