--- a/docker/.env-example
+++ b/docker/.env-example
@@ -1,5 +1,17 @@
-POSTGRES_HOST=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
+# === Database ===
+DB__POSTGRES_HOST= #container name
+DB__POSTGRES_DB=
+DB__POSTGRES_USER=
+DB__POSTGRES_PASSWORD=
+DB__POSTGRES_PORT=
+
+# === JWT ===
+JWT__ISSUER=
+JWT__AUDIENCE=
+JWT__SECRET=
+JWT__ACCESS_TOKEN_EXPIRATION_MINUTES=
+JWT__REFRESH_TOKEN_EXPIRATION_DAYS=
+
+# === ASP.NET environment ===
+ASPNETCORE_ENVIRONMENT=
+ASPNETCORE_URLS=
